refactor: 重构代码并添加编码规范
- 新增 .gitignore 文件，忽略 IDE 相关文件
- 更新 AdapterCapabilities 类，添加详细注释并优化方法- 重构 AdapterRegistry 和 BaseAdapter 类，提高代码可读性- 新增 RateLimitConfig 和 StoreManager 接口的实现类- 优化 FileStoreManager 类，使用更现代的 Java API
- 新增 checkstyle.xml 配置文件，定义代码格式规范
- 添加 IntelliJ IDEA 相关配置文件，统一开发环境